Fixed add to order button alignment

--- a/Project/src/styles/menu.css
+++ b/Project/src/styles/menu.css
@@ -91,6 +91,21 @@ img {
   right: 27px; 
 }
 
+.add-to-cart-button2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #148014;
+  color: white;
+  font-size: 20px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
 .add-to-cart-button:active {
   background-color: white;
   color: #148014;
